exercises/lr/exemplosMaterialTeorico/exemplo1.y
%{
  import java.io.*;
%}
   
%%

S : A B
  | S A B
  ;

A : 'a'
  | 'a' 'a' 'b'
  ;

B : 'b'
  | 'b' 'b' 'a'
  ;

%%

  private Yylex lexer;


  private int yylex () {
    int yyl_return = -1;
    try {
      yylval = new ParserVal(0);
      yyl_return = lexer.yylex();
    }
    catch (IOException e) {
      System.err.println("IO error :"+e.getMessage());
    }
    return yyl_return;
  }


  public void yyerror (String error) {
    System.err.println ("Error: " + error);
  }


  public Parser(Reader r) {
    lexer = new Yylex(r, this);
  }


  static boolean interactive;

  public static void main(String args[]) throws IOException {
    System.out.println("");

    Parser yyparser;
    if ( args.length > 0 ) {
      // parse a file
      yyparser = new Parser(new FileReader(args[0]));
    }
    else {
      // interactive mode
      System.out.println("[Quit with CTRL-D]");
      System.out.print("> ");
      interactive = true;
	    yyparser = new Parser(new InputStreamReader(System.in));
    }

    yyparser.yydebug = true;

    yyparser.yyparse();
    
    if (interactive) {
      System.out.println();
      System.out.println("done!");
    }
  }
