exercises/lr/exercicioYacc/y.output
   0  $accept : S $end

   1  S : A B
   2    | S A B

   3  A : 'a'
   4    | 'a' 'a' 'b'

   5  B : 'b'
   6    | 'b' 'b' 'a'

state 0
	$accept : . S $end  (0)

	'a'  shift 1
	.  error

	S  goto 2
	A  goto 3


state 1
	A : 'a' .  (3)
	A : 'a' . 'a' 'b'  (4)

	'a'  shift 4
	'b'  reduce 3


state 2
	$accept : S . $end  (0)
	S : S . A B  (2)

	$end  accept
	'a'  shift 1
	.  error

	A  goto 5


state 3
	S : A . B  (1)

	'b'  shift 6
	.  error

	B  goto 7


state 4
	A : 'a' 'a' . 'b'  (4)

	'b'  shift 8
	.  error


state 5
	S : S A . B  (2)

	'b'  shift 6
	.  error

	B  goto 9


state 6
	B : 'b' .  (5)
	B : 'b' . 'b' 'a'  (6)

	'b'  shift 10
	$end  reduce 5
	'a'  reduce 5


state 7
	S : A B .  (1)

	.  reduce 1


state 8
	A : 'a' 'a' 'b' .  (4)

	.  reduce 4


state 9
	S : S A B .  (2)

	.  reduce 2


state 10
	B : 'b' 'b' . 'a'  (6)

	'a'  shift 11
	.  error


state 11
	B : 'b' 'b' 'a' .  (6)

	.  reduce 6


4 terminals, 4 nonterminals
7 grammar rules, 12 states
